# neu-det-steel-defect-detection

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: gradio_yolo_demo.py
configs/: classes.yaml  yolo_neu_det.yaml
outputs/reports/: classification_comparison.csv  cpu_smoke_yolov8n_yolo_test_metrics.csv  detection_comparison.csv  mobilenet_v2_history.csv  mobilenet_v2_metrics.csv  mobilenet_v2_se_history.csv  mobilenet_v2_se_metrics.csv  resnet50_history.csv  resnet50_metrics.csv  robustness_classification.csv  robustness_detection.csv  traditional_metrics.csv  yolo11n_ema224_yolo_test_metrics.csv  yolo11n_ema_loss224_yolo_test_metrics.csv  yolo11n_ema_loss320_yolo_test_metrics.csv  yolo11n_img256_yolo_test_metrics.csv  yolo11n_img320_yolo_test_metrics.csv  yolo11n_loss224_yolo_test_metrics.csv  yolo11n_neu_yolo_test_metrics.csv  yolo11s_neu_yolo_test_metrics.csv  yolo_training_curves.csv  yolov8n_neu_yolo_test_metrics.csv  yolov8s_neu_yolo_test_metrics.csv
paper/: course_paper_outline.md
scripts/: aggregate_results.py  autodl_prepare.sh  autodl_setup_and_train.sh  autodl_train.sh  autodl_yolo_ablation.sh  download_neu_det.py  evaluate_robustness.py  export_classifier_onnx.py  export_yolo_onnx.py  plot_yolo_training_curves.py  predict_yolo.py  prepare_dataset.py  train_classifier.py  train_traditional.py  train_yolo.py  visualize_dataset.py
src/steel_defect/: __init__.py  config.py
src/steel_defect/data/: io.py  preprocess.py
src/steel_defect/features/: handcrafted.py
src/steel_defect/models/: __init__.py  yolo_attention.py
(+1 files in other folders)
