[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steel-defect-detection"
version = "0.1.0"
description = "NEU-DET steel surface defect detection coursework project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-contrib-python>=4.8",
  "scikit-image>=0.21",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "pandas>=2.0",
  "tqdm>=4.66",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "Pillow>=10.0",
  "torch>=2.1",
  "torchvision>=0.16",
  "ultralytics>=8.2",
  "gradio>=4.0",
  "onnx>=1.15",
  "kagglehub>=0.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
